@@ -1,6 +1,7 @@
 package org.rubyforge.debugcommons;
 
 import org.rubyforge.debugcommons.model.RubyThread;
+import org.rubyforge.debugcommons.model.SuspensionPoint;
 
 public final class RubyDebugEvent {
     
@@ -12,25 +13,21 @@ public final class RubyDebugEvent {
     
     private final String filePath;
     private final int line;
+    private final boolean stepping;
     
     public RubyDebugEvent(final Type type) {
-        this(null, type);
+        this(null, type, null, -1, false);
     }
     
-    public RubyDebugEvent(final RubyThread rubyThread, final Type type) {
-        this(rubyThread, type, null, -1);
+    public RubyDebugEvent(final RubyThread rubyThread, final SuspensionPoint sp) {
+        this(rubyThread, Type.SUSPEND, sp.getFile(), sp.getLine(), sp.isStep());
     }
-    
-    public RubyDebugEvent(final RubyThread rubyThread,
-            final String filePath,
-            final int line) {
-        this(rubyThread, Type.SUSPEND, filePath, line);
-    }
-    
+
     public RubyDebugEvent(final RubyThread rubyThread,
             final Type type,
             final String filePath,
-            final int line) {
+            final int line,
+            final boolean stepping) {
         if (type == Type.SUSPEND) {
             assert rubyThread != null;
         }
@@ -38,8 +35,9 @@ public final class RubyDebugEvent {
         this.type = type;
         this.filePath = filePath;
         this.line = line;
+        this.stepping = stepping;
     }
-    
+
     public boolean isSuspensionType() {
         return this.type == Type.SUSPEND;
     }
@@ -58,6 +56,10 @@ public final class RubyDebugEvent {
     
     public int getLine() {
         return line;
+    }
+
+    public boolean isStepping() {
+        return stepping;
     }
     
     @Override
